change from nomnom to minami

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
 
 
-    <!-- <audio id="eatDot-audio" src="./assets/audio/dotEat.wav" preload="auto"></audio> -->
+    <audio id="eatDot-audio" src="./assets/audio/dotEat.wav" preload="auto"></audio>
     <h1>IDLE NOM NOM</h1>
     <!-- <label for="volumeSlider">Volume: </label>
     <input type="range" id="volumeSlider" min="0" max="1" step="0.01" value="0.1"> -->
@@ -44,6 +44,7 @@
     <!-- <button id="debugBttn">Debug</button> -->
     <button id="ResetBttn">Reset</button>
     <button id="SaveBttn">Save</button>
+    <!-- kin 1105
     <div class="nomnom-container" kids=false>
         <svg class="nomnom" width="40" height="40" viewBox="0 0 100 100">
             <circle id=mrNomNom cx="50" cy="50" r="50"/>
@@ -54,6 +55,10 @@
                             50,50 100,0 100,100"/>
             </polygon>
         </svg>
+    </div>
+    -->
+    <div class="nomnom-container">
+        <img id="mrNomNom" src="./assets/images/bikeMinami.jpg" alt="Nom character" width="100" height="100">
     </div>
     <div>
         <button id="feedNomNom">FEEEEEED</button>
